--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 </head>
 <!-- I want this website styled to have lots of construction and Sheet Metal workers (SMWIA Logo) refrences and have the site animated to be "built" as you scroll through it -->
 <body>
-  <div class="topnav">
-    <a class="active" href="index.html">Home</a>
-    <a href="#aboutme">About Me</a>
-    <a href="#projects">Projects</a>
-    <a href="#contact">Contact</a>
+  <header>
+    <div class="topnav">
+      <a class="active" href="index.html">Home</a>
+      <a href="#aboutme">About Me</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </div>
+  </header>
   <h1>Hi, I'm Michael Gieser</h1>
   <p>I am a builder of the physical and digital worlds.</p>
   <h2 id="aboutme">About Me</h2>
