--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 <!-- I want this website styled to have lots of construction and Sheet Metal workers (SMWIA Logo) refrences and have the site animated to be "built" as you scroll through it -->
 <body>
   <header>
+    </div>
     <div class="topnav">
-      <a class="active" href="index.html">Home</a>
-      <a href="#aboutme">About Me</a>
+      <a class="active" href="#home">Home</a>
+      <a href="#aboutme">About</a>
       <a href="#projects">Projects</a>
       <a href="#contact">Contact</a>
     </div>
   </header>
-  <h1>Hi, I'm Michael Gieser</h1>
+  <h1 id="home">Hi, I'm Michael Gieser</h1>
   <p>I am a builder of the physical and digital worlds.</p>
   <h2 id="aboutme">About Me</h2>
   <p>For the last 11 years I have had a successful career as a skilled sheet metal worker... <!-- Continue the about me here --> </p> 
