--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   <h2 id="aboutme">About Me</h2>
   <p>For the last 11 years I have had a successful career as a skilled sheet metal worker... <!-- Continue the about me here --> </p> 
   <h2 id="projects">Projects</h2>
-  <iframe id="contact" src="https://docs.google.com/forms/d/e/1FAIpQLSdiptKi-AezT-MIAYYpzIpY-3zsiVkBIEB2mdrylOvRyXxr8g/viewform?embedded=true" width="640" height="689" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+  <h2 id="contact">Contact Me</h2>
+  <!-- Build a contact form here -->
     <script src="script.js"></script>
 
   <!--
