--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>replit</title>
+  <title>Michael Gieser</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <!-- I want this website styled to have lots of construction and Sheet Metal workers (SMWIA Logo) refrences and have the site animated to be "built" as you scroll through it -->
 <body>
   <header>
-    </div>
     <div class="topnav">
       <a class="active" href="#home">Home</a>
       <a href="#aboutme">About</a>
@@ -18,6 +17,13 @@
       <a href="#contact">Contact</a>
     </div>
   </header>
+  <div id="intro">  
+    <h1 id="greeting">Hi, I'm Michael Gieser</h1>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  </div>
+  <div id="building">
+    
+  </div>
   <h1 id="home">Hi, I'm Michael Gieser</h1>
   <p>I am a builder of the physical and digital worlds.</p>
   <h2 id="aboutme">About Me</h2>
