restart with new design and structure

--- a/index.html
+++ b/index.html
@@ -1,44 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Michael Gieser</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+    rel="stylesheet">
+  <title>Document</title>
 </head>
-<!-- I want this website styled to have lots of construction and Sheet Metal workers (SMWIA Logo) refrences and have the site animated to be "built" as you scroll through it -->
-<body>
-  <header>
-    <div class="topnav">
-      <a class="active" href="#home">Home</a>
-      <a href="#aboutme">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
-    </div>
-  </header>
-  <div id="intro">  
-    <h1 id="greeting">Hi, I'm Michael Gieser</h1>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-  </div>
-  <div id="building">
-    
-  </div>
-  <h1 id="home">Hi, I'm Michael Gieser</h1>
-  <p>I am a builder of the physical and digital worlds.</p>
-  <h2 id="aboutme">About Me</h2>
-  <p>For the last 11 years I have had a successful career as a skilled sheet metal worker... <!-- Continue the about me here --> </p> 
-  <h2 id="projects">Projects</h2>
-  <h2 id="contact">Contact Me</h2>
-  <!-- Build a contact form here -->
-    <script src="script.js"></script>
 
-  <!--
-  This script places a badge on your repl's full-browser view back to your repl's cover
-  page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
-  teal, blue, blurple, magenta, pink!
-  -->
-  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
+<body class="bg">
+  <header>
+    <nav id="sticky-header">
+      <div id="mobile-nav-menu">
+        <a href=""></a>
+      </div>
+      <div id="home">
+        <a href=""></a>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <div id="greeting">
+      <h1>Hi, Im Michael Gieser</h1>
+      <p id="tag-line"> 
+        ... let me help you build that!
+      </p>
+    </div>
+  </main>
 </body>
 
 </html>
