--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
   <main>
     <div id="greeting">
       <h1>Hi, Im Michael Gieser</h1>
+      <div id="stick-guy">
+          <svg width="200" height="200" viewBox="0 0 200 200">
+            <g fill="none" stroke="white" stroke-width="4">
+              <circle cx="100" cy="50" r="20" /> <!-- Head -->
+              <line x1="100" y1="70" x2="100" y2="120" /> <!-- Body -->
+              <line class="arm" x1="100" y1="90" x2="80" y2="110" /> <!-- Left arm -->
+              <line x1="100" y1="90" x2="120" y2="110" /> <!-- Right arm -->
+              <line x1="100" y1="120" x2="80" y2="160" /> <!-- Left leg -->
+              <line x1="100" y1="120" x2="120" y2="160" /> <!-- Right leg -->
+              <!-- Hard Hat -->
+              <path d="M66 41 L120 39 L115 27 L103 24 L90 26 L80 39 Z" fill="yellow" />
+            </g>
+          </svg>
+      </div>
       <p id="tag-line"> 
         ... let me help you build that!
       </p>
