--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
@@ -27,20 +27,20 @@
     <div id="greeting">
       <h1>Hi, Im Michael Gieser</h1>
       <div id="stick-guy">
-          <svg width="200" height="200" viewBox="0 0 200 200">
-            <g fill="none" stroke="white" stroke-width="4">
-              <circle cx="100" cy="50" r="20" /> <!-- Head -->
-              <line x1="100" y1="70" x2="100" y2="120" /> <!-- Body -->
-              <line class="arm" x1="100" y1="90" x2="80" y2="110" /> <!-- Left arm -->
-              <line x1="100" y1="90" x2="120" y2="110" /> <!-- Right arm -->
-              <line x1="100" y1="120" x2="80" y2="160" /> <!-- Left leg -->
-              <line x1="100" y1="120" x2="120" y2="160" /> <!-- Right leg -->
-              <!-- Hard Hat -->
-              <path d="M66 41 L120 39 L115 27 L103 24 L90 26 L80 39 Z" fill="yellow" />
-            </g>
-          </svg>
+        <svg width="200" height="200" viewBox="0 0 200 200">
+          <g fill="none" stroke="white" stroke-width="4">
+            <circle cx="100" cy="50" r="20" /> <!-- Head -->
+            <line x1="100" y1="70" x2="100" y2="120" /> <!-- Body -->
+            <line class="arm" x1="100" y1="90" x2="80" y2="110" /> <!-- Left arm -->
+            <line x1="100" y1="90" x2="120" y2="110" /> <!-- Right arm -->
+            <line x1="100" y1="120" x2="80" y2="160" /> <!-- Left leg -->
+            <line x1="100" y1="120" x2="120" y2="160" /> <!-- Right leg -->
+            <!-- Hard Hat -->
+            <path d="M66 41 L120 39 L115 27 L103 24 L90 26 L80 39 Z" fill="yellow" />
+          </g>
+        </svg>
       </div>
-      <p id="tag-line"> 
+      <p id="tag-line">
         ... let me help you build that!
       </p>
     </div>
