--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </header>
   <main>
     <div id="greeting">
-      <h1>Hi, Im Michael Gieser</h1>
+      <h1>Hi, I'm Michael Gieser</h1>
       <div id="stick-guy">
         <svg width="200" height="200" viewBox="0 0 200 200">
           <g fill="none" stroke="white" stroke-width="4">
