added about me and started building nav functionality

--- a/index.html
+++ b/index.html
@@ -9,21 +9,27 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
     rel="stylesheet">
+  <script src="https://kit.fontawesome.com/c4a04e4bbe.js" crossorigin="anonymous">
+  </script>
   <title>Document</title>
 </head>
 
 <body class="bg">
   <header>
     <nav id="sticky-header">
-      <div id="mobile-nav-menu">
-        <a href=""></a>
-      </div>
       <div id="home">
-        <a href=""></a>
+        <a href="#top">
+          <i class="fa-solid fa-angles-up"></i>
+        </a>
+      </div>
+      <div id="mobile-nav-menu">
+        <a href="">
+          <i class="fa-solid fa-bars"></i>
+        </a>
       </div>
     </nav>
   </header>
-  <main>
+  <main id="top">
     <div id="greeting">
       <h1>Hi, Im Michael Gieser</h1>
       <div id="stick-guy">
@@ -44,7 +50,29 @@
         ... let me help you build that!
       </p>
     </div>
+    <div id="empty-div"></div>
+    <div id="about-me">
+      <h1>About Me</h1>
+      <p>I am a <span class="red">&lt;strong&gt;</span>sheet metal worker<span class="red">&lt;/strong&gt;</span> turned
+        <span class="green">&lt;soft&gt;</span>Front-End Developer<span class="green">&lt;/soft&gt;</span>, interested
+        in all things computer programming related.
+      </p>
+      <p>
+        For over a decade I have been working in the field of construction, installing HVAC systems in the commercial
+        sector. My love of being able to take raw materials and transform them into something greater than the sum of
+        its parts is what first attracted me to field. It is also what has drawn me to coding.
+      </p>
+      <p>
+        From the very first <span class="black">&gt; Hello World</span> and javascript algorithm, I was hooked. Not only
+        do I get to build amazing and beautiful things, but I get to continue using and strengthening my problem solving
+        skills.
+      </p>
+      <p>
+
+      </p>
+    </div>
   </main>
+  <script src="script.js"></script>
 </body>
 
 </html>
