--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div id="about-me">
       <h1>About Me</h1>
       <p>I am a <span class="red">&lt;strong&gt;</span>sheet metal worker<span class="red">&lt;/strong&gt;</span> turned
-        <span class="green">&lt;soft&gt;</span>Front-End Developer<span class="green">&lt;/soft&gt;</span>, interested
+        <span class="green">&lt;select&gt;</span>Front-End Developer<span class="green">&lt;/select&gt;</span>, interested
         in all things computer programming related.
       </p>
       <p>
