nav bar styling

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <line x1="100" y1="120" x2="80" y2="160" /> <!-- Left leg -->
             <line x1="100" y1="120" x2="120" y2="160" /> <!-- Right leg -->
             <!-- Hard Hat -->
-            <path d="M66 41 L120 39 L115 27 L103 24 L90 26 L80 39 Z" fill="yellow" />
+            <path d="M66 41 L120 39 L115 27 L103 24 L90 26 L80 39 Z" fill="#fde740" />
           </g>
         </svg>
       </div>
@@ -53,7 +53,7 @@
     <div id="empty-div"></div>
     <div id="about-me">
       <h1>About Me</h1>
-      <p>I am a <span class="red">&lt;strong&gt;</span>sheet metal worker<span class="red">&lt;/strong&gt;</span> turned
+      <p>I am a <span class="red">&lt;strong&gt;</span>Sheet Metal Worker<span class="red">&lt;/strong&gt;</span> turned
         <span class="green">&lt;select&gt;</span>Front-End Developer<span class="green">&lt;/select&gt;</span>, interested
         in all things computer programming related.
       </p>
@@ -63,7 +63,7 @@
         its parts is what first attracted me to field. It is also what has drawn me to coding.
       </p>
       <p>
-        From the very first <span class="black">&gt; Hello World</span> and javascript algorithm, I was hooked. Not only
+        From the very first <span class="black">&gt; Hello World</span> and <span class="green">javaScript</span><span class="red">(</span><span class="orange">algorithm</span><span class="red">)</span>, I was hooked. Not only
         do I get to build amazing and beautiful things, but I get to continue using and strengthening my problem solving
         skills.
       </p>
