Final first draft (mobile only atm and needs menu functionality)

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
       </div>
     </nav>
   </header>
+  <section id="mobile-nav">
+
+  </section>
   <main id="top">
     <div id="greeting">
       <h1>Hi, I'm Michael Gieser</h1>
@@ -54,7 +57,8 @@
     <div id="about-me">
       <h1>About Me</h1>
       <p>I am a <span class="red">&lt;strong&gt;</span>Sheet Metal Worker<span class="red">&lt;/strong&gt;</span> turned
-        <span class="green">&lt;select&gt;</span>Front-End Developer<span class="green">&lt;/select&gt;</span>, interested
+        <span class="green">&lt;select&gt;</span>Front-End Developer<span class="green">&lt;/select&gt;</span>,
+        interested
         in all things computer programming related.
       </p>
       <p>
@@ -63,13 +67,60 @@
         its parts is what first attracted me to field. It is also what has drawn me to coding.
       </p>
       <p>
-        From the very first <span class="black">&gt; Hello World</span> and <span class="green">javaScript</span><span class="red">(</span><span class="orange">algorithm</span><span class="red">)</span>, I was hooked. Not only
+        From the very first <span class="black">&gt; Hello World</span> and <span class="green">javaScript</span><span
+          class="red">(</span><span class="orange">algorithm</span><span class="red">)</span>, I was hooked. Not only
         do I get to build amazing and beautiful things, but I get to continue using and strengthening my problem solving
-        skills.
+        skills in a different environment.
       </p>
       <p>
-
+        The level of control and space available for creating in the digital world is virtually boundless and excites me more than I could have imagined. I look forward to seeing where this path will take me, and it will be nice to get to experience working on the receiving end of a well installed HVAC system. 
       </p>
+      <h4>
+        Take a look at some of the things that I have created.
+      </h4>
+    </div>
+    <div id="empty-div"></div>
+    <div id="projects">
+      <h1>Projects</h1>
+      <a href="https://mgieser90.github.io/Basic-Calculator/">
+        <img src="Basic Calculator.png" alt="Basic Calculator">
+      </a>
+      <h4>A Basic Calculator with a retro look and feel.</h4>
+      <p>
+        This was my first JavaScript heavy project. I worked on it slowly as I learned JavaScript and would implement
+        the new concepts I was learning to complete the functions of the buttons. Throughout the process I honed in my
+        problem solving skills by learning how to break up the bigger parts of the logic into smaller pieces.
+      </p>
+      <div id="empty-div2"></div>
+      <a href="https://mgieser90.github.io/2Barrels-clone/">
+        <img src="Website Clone_Resume.png" alt="Website clone/resume">
+      </a>
+      <h4>Website clone/Resume</h4>
+      <p>
+        I built this website clone as part of my application to a local software company. While replicating the layout
+        of the site, I replaced the original content, (info about the company) with information about myself, acting as
+        a sort of interactive resume. When I discovered this company, I really felt attracted to their values. I wanted
+        to make something for them that expressed how much I desired to work there.
+      </p>
+      <div id="empty-div2"></div>
+    </div>
+    <div id="contact-me">
+      <h1>Contact Me</h1>
+      <p>
+        Like what you saw? Need someone like me?
+      </p>
+      <h3>Reach out to me!</h3>
+      <div id="contact-links">
+        <a href="tel:1509.768.1556">
+          <i class="fa-solid fa-phone"></i>
+        </a>
+        <a href="mailto:mgieser90@gmail.com?subject=Let's talk!">
+          <i class="fa-solid fa-envelope"></i>
+        </a>
+        <a href="http://github.com/mgieser90">
+          <i class="fa-brands fa-github"></i>
+        </a>
+      </div>
     </div>
   </main>
   <script src="script.js"></script>
