--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     rel="stylesheet">
   <script src="https://kit.fontawesome.com/c4a04e4bbe.js" crossorigin="anonymous">
   </script>
-  <title>Michael Gieser - Builder of physical and digital worlds </title>
+  <title>Michael Gieser - Builder of physical and digital worlds. </title>
 </head>
 
 <body class="bg">
