--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <p>
         For over a decade I have been working in the field of construction, installing HVAC systems in the commercial
         sector. My love of being able to take raw materials and transform them into something greater than the sum of
-        its parts is what first attracted me to field. It is also what has drawn me to coding.
+        its parts is what first attracted me to the field. It is also what has drawn me to coding.
       </p>
       <p>
         From the very first <span class="black">&gt; Hello World</span> and <span class="green">javaScript</span><span
