--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         skills in a different environment.
       </p>
       <p>
-        The level of control and space available for creating in the digital world is virtually boundless and excites me more than I could have imagined. I look forward to seeing where this path will take me, and it will be nice to get to experience working on the receiving end of a well installed HVAC system. 
+        The level of control and space available for creating in the digital world is virtually boundless and excites me more than I could have imagined. I look forward to seeing where this path will take me, and it will be nice to get to experience working on the receiving end of a well installed HVAC system for once. 
       </p>
       <h4>
         Take a look at some of the things that I have created.
