--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
   <title>Michael Gieser - Builder of physical and digital worlds. </title>
 </head>
 
+<div id="background"></div>
+<div id="overlay"></div>
+
 <body class="bg">
+
   <header>
     <nav id="sticky-header">
       <div id="home">
@@ -73,7 +77,9 @@
         skills in a different environment.
       </p>
       <p>
-        The level of control and space available for creating in the digital world is virtually boundless and excites me more than I could have imagined. I look forward to seeing where this path will take me, and it will be nice to get to experience working on the receiving end of a well installed HVAC system. 
+        The level of control and space available for creating in the digital world is virtually boundless and excites me
+        more than I could have imagined. I look forward to seeing where this path will take me, and it will be nice to
+        get to experience working on the receiving end of a well installed HVAC system.
       </p>
       <h4>
         Take a look at some of the things that I have created.
