added working mobile nav w/animations

--- a/index.html
+++ b/index.html
@@ -26,16 +26,24 @@
           <i class="fa-solid fa-angles-up"></i>
         </a>
       </div>
-      <div id="mobile-nav-menu">
-        <a href="">
+      <div id="menu-button">
+        <a href="#">
           <i class="fa-solid fa-bars"></i>
         </a>
       </div>
     </nav>
   </header>
-  <section id="mobile-nav">
-
-  </section>
+  <nav id="mobile-nav-background">
+    <div id="nav-area">
+      <i class="fa-regular fa-rectangle-xmark" id="close"></i>
+      <div id="selections">
+        <a href="#top" class="nav-button">Home</a>
+        <a href="#about-me" class="nav-button">About Me</a>
+        <a href="#projects" class="nav-button">Projects</a>
+        <a href="#contact-me" class="nav-button">Contact Me</a>
+      </div>
+    </div>
+  </nav>
   <main id="top">
     <div id="greeting">
       <h1>Hi, I'm Michael Gieser</h1>
@@ -77,7 +85,9 @@
         skills in a different environment.
       </p>
       <p>
-        The level of control and space available for creating in the digital world is virtually boundless and excites me more than I could have imagined. I look forward to seeing where this path will take me, and it will be nice to get to experience working on the receiving end of a well installed HVAC system for once. 
+        The level of control and space available for creating in the digital world is virtually boundless and excites me
+        more than I could have imagined. I look forward to seeing where this path will take me, and it will be nice to
+        get to experience working on the receiving end of a well installed HVAC system for once.
       </p>
       <h4>
         Take a look at some of the things that I have created.
