added comment detailing future "day/night" mode button

--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
       </div>
     </div>
   </nav>
+  <!-- Planned update:(initial load in "day" mode) When the user taps/clicks the "day/night" switch on the left side, have the stick guy walk to it and flip the switch down to "night"
+    - background image "pixelizes" to new code themed dark image from upper left corner to lower left corner
+    - at the same time, all the text and icons fade to a lighter color that is readable and matches the style of the new background and a "stick" computer desk fades in where the stick guy was originally
+    - while the "environment" is changing, the stick guy hangs his hat next to the switch and walks over to and sits down at the newly arrived desk, maybe he appears to be typing 
+  When the user taps/clicks the "day/night" switch to turn it back to day, have the stick guy get up and walk to the switch and switch it up to "day"
+    - background image "pixelizes" to original blueprint themed light image from upper left corner to lower left corner 
+    - at the same time, all the text and icons fade back to their original color and the "stick" computer desk fades out
+    - while the "environment" is reverting back, the stick guy grabs his hat off the wall and puts it back on while walking back to his original position and starts waving again -->
   <main id="top">
     <div id="greeting">
       <h1>Hi, I'm Michael Gieser</h1>
