added more styling

--- a/index.html
+++ b/index.html
@@ -103,27 +103,33 @@
     </div>
     <div id="empty-div"></div>
     <div id="projects">
-      <h1>Projects</h1>
-      <a href="https://mgieser90.github.io/Basic-Calculator/">
-        <img src="Basic Calculator.png" alt="Basic Calculator">
-      </a>
-      <h4>A Basic Calculator with a retro look and feel.</h4>
-      <p>
-        This was my first JavaScript heavy project. I worked on it slowly as I learned JavaScript and would implement
-        the new concepts I was learning to complete the functions of the buttons. Throughout the process I honed in my
-        problem solving skills by learning how to break up the bigger parts of the logic into smaller pieces.
-      </p>
+      <div class="project">
+        <h1>Projects</h1>
+        <a href="https://mgieser90.github.io/Basic-Calculator/">
+          <img src="Basic Calculator.png" alt="Basic Calculator">
+        </a>
+        <h4>A Basic Calculator with a retro look and feel.</h4>
+        <p>
+          This was my first JavaScript heavy project. I worked on it slowly as I learned JavaScript and would implement
+          the new concepts I was learning to complete the functions of the buttons. Throughout the process I honed in my
+          problem solving skills by learning how to break up the bigger parts of the logic into smaller pieces.
+        </p>
+      </div>
       <div id="empty-div2"></div>
-      <a href="https://mgieser90.github.io/2Barrels-clone/">
-        <img src="Website Clone_Resume.png" alt="Website clone/resume">
-      </a>
-      <h4>Website clone/Resume</h4>
-      <p>
-        I built this website clone as part of my application to a local software company. While replicating the layout
-        of the site, I replaced the original content, (info about the company) with information about myself, acting as
-        a sort of interactive resume. When I discovered this company, I really felt attracted to their values. I wanted
-        to make something for them that expressed how much I desired to work there.
-      </p>
+      <div class="project">
+        <a href="https://mgieser90.github.io/2Barrels-clone/">
+          <img src="Website Clone_Resume.png" alt="Website clone/resume">
+        </a>
+        <h4>Website clone/Resume</h4>
+        <p>
+          I built this website clone as part of my application to a local software company. While replicating the layout
+          of the site, I replaced the original content, (info about the company) with information about myself, acting
+          as
+          a sort of interactive resume. When I discovered this company, I really felt attracted to their values. I
+          wanted
+          to make something for them that expressed how much I desired to work there.
+        </p>
+      </div>
       <div id="empty-div2"></div>
     </div>
     <div id="contact-me">
