Made responsive for tablets

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <div id="contact-me">
       <h1>Contact Me</h1>
       <p>
-        Like what you saw? Need someone like me?
+        Like what you see? Need someone like me?
       </p>
       <h3>Reach out to me!</h3>
       <div id="contact-links">
