--- a/index.html
+++ b/index.html
@@ -45,14 +45,15 @@
     </div>
   </nav>
   <nav id="lg-screen-fixed-nav">
-    <div class="lg-nav-button" id="slide-out">
+    <!-- Pause on slide out nav...
+      <div class="lg-nav-button" id="slide-out">
       <a href="">
         <i class="fa-solid fa-angles-left"></i> </a>
     </div>
     <div class="lg-nav-button" id="slide-in">
       <a href="">
         <i class="fa-solid fa-angles-right"></i> </a>
-    </div>
+    </div> -->
     <div class="lg-nav-button" id="side-nav-home">
       <a href="#top">
         <i class="fa-solid fa-angles-up"></i>
