nav and naming convention fixes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div id="selections">
         <a href="#top" class="nav-button">Home</a>
         <a href="#about-me" class="nav-button">About Me</a>
-        <a href="#projects" class="nav-button">Projects</a>
+        <a href="#project-header" class="nav-button">Projects</a>
         <a href="#contact-me" class="nav-button">Contact Me</a>
       </div>
     </div>
@@ -67,7 +67,7 @@
       </a>
     </div>
     <div class="lg-nav-button" id="side-nave-projects">
-      <a href="#projects">
+      <a href="#project-header">
         <i class="fa-solid fa-screwdriver-wrench"></i>
         <p>Projects</p>
       </a>
@@ -108,7 +108,7 @@
         ... let me help you build that!
       </p>
     </div>
-    <div id="empty-div"></div>
+    <div class="empty-div"></div>
     <div id="about-me">
       <h1>About Me</h1>
       <p>I am a <span class="red">&lt;strong&gt;</span>Sheet Metal Worker<span class="red">&lt;/strong&gt;</span> turned
@@ -136,8 +136,10 @@
         Take a look at some of the things that I have created.
       </h4>
     </div>
-    <div id="empty-div"></div>
-    <h1>Projects</h1>
+    <div class="empty-div"></div>
+    <div id="project-header">
+      <h1>Projects</h1>
+    </div>
     <div id="projects">
       <div class="project" id="bc">
         <a href="https://mgieser90.github.io/Basic-Calculator/">
@@ -149,7 +151,7 @@
           the new concepts I was learning to complete the functions of the buttons. Throughout the process I honed in my
           problem solving skills by learning how to break up the bigger parts of the logic into smaller pieces.
         </p>
-        <div id="empty-div2"></div>
+        <div class="empty-div2"></div>
       </div>
       <div class="project" id="wcr">
         <a href="https://mgieser90.github.io/2Barrels-clone/">
@@ -164,7 +166,7 @@
           wanted
           to make something for them that expressed how much I desired to work there.
         </p>
-        <div id="empty-div2"></div>
+        <div class="empty-div2"></div>
       </div>
     </div>
     <div id="contact-me">
